Document and adapt find query, don't use the salt:/ prefix anymore
